--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "web-creator",
+  "name": "freshfold-durban",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "node scripts/build.mjs",
-    "build": "node scripts/build.mjs --production"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "serve": "vite preview --port 3000"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -61,12 +64,15 @@
   "devDependencies": {
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
+    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.21",
     "esbuild": "0.25.4",
     "esbuild-style-plugin": "^1.6.3",
     "postcss": "^8.5.3",
     "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.17",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.2.2",
+    "vite": "^5.4.10"
   }
 }
